# rocket-openapi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: basic_rocket_test_hello.json  basic_rocket_test_hello_json.json  basic_rocket_test_hello_param.json  basic_rocket_tests.rs
